FilterOptions: fix clearSearch button's vertical alignment
J=SPR-2506
TEST=manual
Tested that on page
https://synergic-health_yextdemos_com.yextpages.net/providers.html
adding this line of css correctly vertically aligns the clear button

Also tested that locally, I can manually set the text input to arbitrary
heights and the clear button will still be aligned

--- a/src/ui/sass/modules/_FilterOptions.scss
+++ b/src/ui/sass/modules/_FilterOptions.scss
@@ -101,6 +101,7 @@
     position: absolute;
     right: 0;
     top: 50%;
+    height: 100%;
     transform: translateY(-50%);
     border: none;
     background: none;
